# libsynthpp

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists-SDL.txt  CMakeLists-SDL_ttf.txt  CMakeLists-UmeFont.txt  CMakeLists.txt  CppProperties.json  LICENSE  README.md  depends.cmake  libsynthpp.sln
libsynthpp/: AGENTS.md  CMakeLists.txt  base.ixx  libsynthpp.vcxproj  libsynthpp.vcxproj.filters
libsynthpp/include/LSP/Base/: Base.hpp  Math.hpp  Message.hpp  Sample.hpp  Signal.hpp
libsynthpp/include/LSP/Filter/: BiquadraticFilter.hpp  EnvelopeGenerator.hpp
libsynthpp/include/LSP/Generator/: FunctionGenerator.hpp
libsynthpp/include/LSP/MIDI/: Controller.hpp
libsynthpp/include/LSP/Synth/: Voice.hpp
libsynthpp/src/: static_test.cpp
libsynthpp/src/LSP/: static_test.cpp
libsynthpp/src/LSP/Audio/: SDLOutput.cpp  SDLOutput.hpp  WasapiOutput.cpp  WasapiOutput.hpp  WavFileOutput.cpp  WavFileOutput.hpp
libsynthpp/src/LSP/Base/: Base.hpp  Id.hpp  Logging.cpp  Logging.hpp  Math.hpp  Message.hpp  Signal.hpp  StackTrace.cpp  StackTrace.hpp
libsynthpp/src/LSP/Filter/: BiquadraticFilter.hpp  EnvelopeGenerator.hpp
libsynthpp/src/LSP/Generator/: FunctionGenerator.hpp  WaveTableGenerator.hpp
libsynthpp/src/LSP/MIDI/: Message.hpp  MessageReceiver.hpp  Parser.cpp  Sequencer.cpp  Sequencer.hpp
libsynthpp/src/LSP/Synth/: Instrument.cpp  Instrument.hpp  Luath.cpp  Luath.hpp  MidiChannel.cpp  MidiChannel.hpp  MidiChannelDrum.cpp  MidiChannelMelody.cpp  SimpleVoice.hpp  Voice.cpp  Voice.hpp  VoiceMapper.cpp  VoiceMapper.hpp  WaveTable.cpp  WaveTable.hpp  WaveTableVoice.hpp
libsynthpp/src/LSP/Threading/: EventSignal.cpp  EventSignal.hpp  TaskDispatcher.cpp  Thread.cpp
libsynthpp/src/LSP/Util/: fft.hpp
libsynthpp/src/LSP/util/: fft.hpp  thread_priority.cpp  thread_priority.hpp
libsynthpp/src/MIDI/: Controller.cpp  Parser.cpp  Sequencer.cpp
libsynthpp/src/MIDI/Synthesizer/: VoiceMapper.cpp
libsynthpp/src/lsp/: static_test.cpp
libsynthpp/src/lsp.audio/: _audio.ixx  wasapi_output.cpp  wasapi_output.ixx  wav_file_output.cpp  wav_file_output.ixx
libsynthpp/src/lsp.core/: _core.ixx  _core.win32.ixx  base.cpp  id.ixx  logging.cpp  logging.ixx  math.ixx  sample.ixx  signal.ixx  win32_com_ptr.cpp  win32_com_ptr.ixx  win32_headers.h
libsynthpp/src/lsp.effector/: _effector.ixx  biquadratic_filter.ixx  envelope_generator.ixx
libsynthpp/src/lsp.fft/: fft.ixx
libsynthpp/src/lsp.generator/: _generator.ixx  function_generator.ixx  wave_table_generator.ixx
libsynthpp/src/lsp.threading/: thread_priority.cpp  thread_priority.ixx
libsynthpp/src/lsp/analysis/: fft.hpp
libsynthpp/src/lsp/audio/: wasapi_output.cpp  wasapi_output.hpp  wav_file_output.cpp  wav_file_output.hpp
libsynthpp/src/lsp/base/: base.cpp  base.hpp  event_signal.cpp  event_signal.hpp  id.hpp  logging.cpp  logging.hpp  math.hpp  message.cpp  message.hpp  sample.hpp  signal.hpp  stack_trace.cpp  stack_trace.hpp  thread_util.cpp  thread_util.hpp
libsynthpp/src/lsp/core/: base.cpp  base.hpp  basic_utility.cpp  basic_utility.hpp  contracts.hpp  core.hpp  id.hpp  logging.cpp  logging.hpp  math.hpp  sample.hpp  signal.hpp
libsynthpp/src/lsp/dsp/: biquadratic_filter.hpp  envelope_generator.hpp  fft.hpp  function_generator.hpp  lfo.hpp  wave_table_generator.hpp
libsynthpp/src/lsp/effector/: biquadratic_filter.hpp  envelope_generator.hpp
libsynthpp/src/lsp/filter/: biquadratic_filter.hpp  envelope_generator.hpp
libsynthpp/src/lsp/generator/: function_generator.hpp  wave_table_generator.hpp
libsynthpp/src/lsp/io/: sdl_output.cpp  sdl_output.hpp  wasapi_output.cpp  wasapi_output.hpp  wav_file_output.cpp  wav_file_output.hpp
libsynthpp/src/lsp/midi/: message.hpp  message_receiver.hpp  parser.cpp  parser.hpp  sequencer.cpp  sequencer.hpp  system_type.hpp
libsynthpp/src/lsp/synth/: base.hpp  channel_params.cpp  channel_params.hpp  channel_params_drum.cpp  channel_params_melody.cpp  instrument_table.hpp  instruments.cpp  instruments.hpp  luath.cpp  luath.hpp  luath_synth.cpp  midi_channel.cpp  midi_channel.hpp  midi_channel_drum.cpp  midi_channel_melody.cpp  sound.hpp  state.cpp  state.hpp  synth.cpp  (+7 more)
luath/: AGENTS.md  CMakeLists.txt  Resource.h  luath.aps  luath.rc  luath.vcxproj  luath.vcxproj.filters  memo.txt
luath-app/: CMakeLists.txt
luath-app/assets/sample_midi/: Sample0.mid
luath-app/src/luath-app/: main.cpp
luath-gui/: CMakeLists.txt
luath-gui/assets/sample_midi/: brambles_vsc3.mid
luath-gui/src/Luath/: luath-gui.exe.manifest
luath-gui/src/Window/: MainWindow.cpp
luath-gui/src/luath_gui/: main.cpp
luath/assets/instruments/: drum.toml  melody_000_piano.toml  melody_016_organ_guitar.toml  melody_032_bass_strings.toml  melody_056_brass_reed_pipe.toml  melody_080_synth.toml  melody_096_sfx.toml
luath/src/: main.cpp
luath/src/App/: Application.cpp  FontCache.cpp
luath/src/Base/: Base.cpp
luath/src/Synthesizer/: Generator.cpp  Tone.cpp  ToneGenerator.cpp  Tones.cpp
luath/src/Widget/: OscilloScope.cpp
luath/src/Window/: MainWindow.cpp
luath/src/luath/: base.hpp  luath.cpp  luath.exe.manifest  luath.hpp  main.cpp  midi_channel.cpp  midi_channel.hpp  midi_channel_drum.cpp  midi_channel_melody.cpp  voice.cpp  voice.hpp  wave_table.cpp  wave_table.hpp
src/: CMakeLists.txt  static_test.cpp
src/Audio/: SDLOutput.cpp  WasapiOutput.cpp  WavFileOutput.cpp
src/Base/: Base.cpp  Logging.cpp  Message.cpp  Signal.cpp  String.cpp
src/Debugging/: Logging.cpp  StackTrace.cpp
src/MIDI/: Parser.cpp
src/MIDI/Messages/: Messages.cpp
src/MIDI/SMF/: Parser.cpp  Player.cpp  Sequencer.cpp
src/MIDI/Synthesizer/: ToneMapper.cpp
src/Signal/: Signal.cpp  simple_signal.cpp
src/Stream/: Message.cpp  MessageQueue.cpp
src/Threading/: EventSignal.cpp  TaskDispatcher.cpp  TaskSet.cpp  Thread.cpp  ThreadPool.cpp
src/Util/: BiquadraticFilter.cpp
src/base/: base.cpp
test/: CMakeLists.txt  main.cpp  test.hpp  test_base.cpp  test_util.cpp
test/case/: test_base.cpp  test_base.hpp  test_sdl.cpp  test_sdl.hpp  test_smf.cpp  test_smf.hpp  test_wasapi.cpp  test_wasapi.hpp
(+201 files in other folders)
